@@ -1,8 +1,8 @@
 package com.example.bookshelf.web;
 
+import com.example.bookshelf.integration.aladin.AladinSearchOptions;
 import com.example.bookshelf.integration.aladin.AladinSearchService;
 import com.example.bookshelf.integration.aladin.AladinUsedStockService;
-import jakarta.servlet.http.HttpSession;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -11,31 +11,44 @@ import org.springframework.web.bind.annotation.RequestParam;
 @Controller
 public class AladinController {
 
-    private final AuthSessionHelper authSessionHelper;
     private final AladinSearchService aladinSearchService;
     private final AladinUsedStockService aladinUsedStockService;
 
-    public AladinController(AuthSessionHelper authSessionHelper,
-                            AladinSearchService aladinSearchService,
+    public AladinController(AladinSearchService aladinSearchService,
                             AladinUsedStockService aladinUsedStockService) {
-        this.authSessionHelper = authSessionHelper;
         this.aladinSearchService = aladinSearchService;
         this.aladinUsedStockService = aladinUsedStockService;
     }
 
     @GetMapping("/aladin/search")
     public String search(@RequestParam(value = "query", required = false) String query,
-                         HttpSession session,
+                         @RequestParam(value = "queryType", required = false) String queryType,
+                         @RequestParam(value = "searchTarget", required = false) String searchTarget,
+                         @RequestParam(value = "sort", required = false) String sort,
+                         @RequestParam(value = "cover", required = false) String cover,
+                         @RequestParam(value = "maxResults", required = false) Integer maxResults,
+                         @RequestParam(value = "start", required = false) Integer start,
+                         @RequestParam(value = "categoryId", required = false) Integer categoryId,
+                         @RequestParam(value = "recentPublishFilter", required = false) Integer recentPublishFilter,
+                         @RequestParam(value = "outOfStockFilter", required = false, defaultValue = "false") boolean outOfStockFilter,
                          Model model) {
-        if (!authSessionHelper.isLoggedIn(session)) {
-            return "redirect:/user/login";
-        }
+        AladinSearchOptions options = AladinSearchOptions.of(
+                query,
+                queryType,
+                searchTarget,
+                sort,
+                cover,
+                maxResults,
+                start,
+                categoryId,
+                recentPublishFilter,
+                outOfStockFilter
+        );
+        model.addAttribute("options", options);
+        model.addAttribute("query", options.query());
 
-        authSessionHelper.populateMember(model, session);
-        model.addAttribute("query", query != null ? query : "");
-
-        if (query != null && !query.trim().isEmpty()) {
-            model.addAttribute("searchView", aladinSearchService.searchBookView(query.trim()));
+        if (!options.query().isBlank()) {
+            model.addAttribute("searchView", aladinSearchService.searchBookView(options));
         }
         return "aladin_search";
     }
@@ -43,13 +56,7 @@ public class AladinController {
     @GetMapping("/aladin/used")
     public String used(@RequestParam("isbn13") String isbn13,
                        @RequestParam(value = "type", required = false, defaultValue = "dropshipping") String type,
-                       HttpSession session,
                        Model model) {
-        if (!authSessionHelper.isLoggedIn(session)) {
-            return "redirect:/user/login";
-        }
-
-        authSessionHelper.populateMember(model, session);
         model.addAttribute("isbn13", isbn13);
         model.addAttribute("type", type);
         model.addAttribute("usedView", aladinUsedStockService.usedBookView(isbn13, type));
